# skybit

./: .gitignore  .pre-commit-config.yaml  DESIGN_PREVIEW.md  README.md  claude_test.apk  index.html  inject_theme.py  kfc_chicken_variants.py  kfc_circle_draft.py  kfc_designs.py  main.py  netlify.toml  play.html  pyproject.toml  skybit.apk  style.css  take_screenshots.py  web.tmpl
docs/: CRITIQUE.md  REVIEW.md  SECURITY.md  intro_animation_brief.md  pillar_redesign_options.md  story.md
game/: _plausibility.py  _proof.py  audio.py  biome.py  config.py  dollar_coin_glyphs.py  dollar_parrot_ghost.py  dollar_parrot_glasses.py  dollar_parrot_hat.py  dollar_variants.py  draw.py  entities.py  hud.py  intro.py  kfc_fries.py  leaderboard.py  nameentry.py  parrot.py  pillar_variants.py  play_log.py  save_state.py  scenes.py  storage.py  surprise_box_variants.py  weather.py  world.py
skybit/: app.py  config.py  entities.py  hud.py  palette.py  sprites.py  storage.py  world.py
sound_candidates/: README.md
sound_candidates_v3/: README.md
src/: audio.js  config.js  entities.js  fx.js  gfx.js  hud.js  input.js  main.js  palette.js  scenes.js  sprites.js  storage.js  world.js
supabase/: schema.sql  setup_leaderboard.sql
tests/: README.md  conftest.py  test_boot.py  test_contracts.py  test_e2e.py  test_plausibility.py
tools/: autoplay.py  biome_snapshots.py  build_sound_candidates.py  bundle.mjs  check_anon_key.py  coin_preview.py  diagnose_browser.py  diagnose_supabase.py  dollar_coin_preview.py  dollar_icon_preview.py  dollar_parrot_ghost_preview.py  dump_music.py  (+42 more)
(+69 files in other folders)
