[project]
name = "skybit"
version = "1.1.0"
description = "Skybit — Pocket Sky Flyer"
requires-python = ">=3.11"
dependencies = ["pygame>=2.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[tool.pygbag]
title = "Skybit"
version = "1.1.0"
optimize = 1

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
filterwarnings = [
    "ignore::DeprecationWarning:pygame.*",
    "ignore::DeprecationWarning:pkg_resources.*",
    # scenes._on_death wraps play_log.log_run in asyncio.create_task(); in
    # tests there's no running event loop, so the create_task call raises
    # RuntimeError and the coroutine is discarded unawaited. Harmless.
    "ignore::RuntimeWarning:asyncio.*",
    "ignore:coroutine .* was never awaited:RuntimeWarning",
]
